# sawd

./: .clang-tidy  CMakeLists.txt  CMakePresets.json  HACKING.md  README.md  vcpkg.json
cmake/: dev-mode.cmake  install-rules.cmake  variables.cmake
source/: io_context.hpp  lib.cpp  lib.hpp  main.cpp  socket.hpp
test/: CMakeLists.txt
test/source/: sawd_test.cpp
